add pagination to all list endpoints
